--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -18,6 +18,7 @@
         android:src="@drawable/logo" />
 
     <EditText
+        android:id="@+id/edtloginemail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableEnd="@drawable/baseline_email"
@@ -29,6 +30,7 @@
         android:textSize="20sp" />
 
     <EditText
+        android:id="@+id/edtloginsenha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -40,6 +42,7 @@
         android:paddingRight="10sp" />
 
     <Button
+        android:id="@+id/btnEntrar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -48,6 +51,7 @@
         android:textSize="20sp" />
 
     <Button
+        android:id="@+id/btnSair"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
